Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-36256

Crash on disconnect when dropped Aria table with vector key under lock

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • 11.8, 12.0(EOL)
    • 11.8.2
    • Vector search
    • None

    Description

      This crash is similar to MDEV-35267, but here the crash only occurs when there are multiple tables in the lock statement.

      CREATE OR REPLACE TABLE t (v VECTOR (1) NOT NULL,VECTOR(v)) ENGINE=ARIA;
      CREATE OR REPLACE TABLE t2 (c INT) ENGINE=ARIA;
      LOCK TABLES t WRITE,t2 WRITE;
      INSERT INTO t VALUES (0x31313131);
      DROP TABLE t;
      

      Leads to:

      CS 11.8.1 5217d8609b6eafc83e4f1c52b2b34c12dd41c3d7 (Optimized) Build 10/03/2025

      Core was generated by `/test/MD100325-mariadb-11.8.1-linux-x86_64-opt/bin/mariadbd --no-defaults --max'.
      Program terminated with signal SIGSEGV, Segmentation fault.
      #0  0x000055d47f644f17 in _ma_reset_history (share=0x147d2c06cd78)at /test/11.8_opt/storage/maria/ma_state.c:835
       
      [Current thread is 1 (Thread 0x147d809696c0 (LWP 2796635))]
      (gdb) bt
      #0  0x000055d47f644f17 in _ma_reset_history (share=0x147d2c06cd78)at /test/11.8_opt/storage/maria/ma_state.c:835
      #1  _ma_trnman_end_trans_hook (trn=0x55d484e969e8, commit=<optimized out>, active_transactions=0 '\000')at /test/11.8_opt/storage/maria/ma_state.c:482
      #2  0x000055d47f655caf in trnman_end_trn (trn=trn@entry=0x55d484e969e8, commit=commit@entry=1 '\001') at /test/11.8_opt/storage/maria/trnman.c:498
      #3  0x000055d47f672e35 in ma_commit (trn=0x55d484e969e8)at /test/11.8_opt/storage/maria/ma_commit.c:73
      #4  0x000055d47f652965 in ha_maria::external_lock (this=0x147d2c0312d8, thd=0x147d2c000c68, lock_type=2)at /test/11.8_opt/storage/maria/ha_maria.cc:3009
      #5  0x000055d47f496b6e in handler::ha_external_lock (this=0x147d2c0312d8, thd=0x147d2c000c68, lock_type=2) at /test/11.8_opt/sql/handler.cc:7677
      #6  0x000055d47f5b5a14 in handler::ha_external_unlock (this=0x147d2c06d628, thd=0x147d2c000c68) at /test/11.8_opt/sql/handler.h:3593
      #7  unlock_external (thd=0x147d2c000c68, table=0x147d2c027a08, count=<optimized out>) at /test/11.8_opt/sql/lock.cc:745
      #8  mysql_unlock_tables (thd=0x147d2c000c68, sql_lock=0x147d2c0279c8, free_lock=true) at /test/11.8_opt/sql/lock.cc:436
      #9  0x000055d47f1b16fb in close_thread_tables (thd=thd@entry=0x147d2c000c68)at /test/11.8_opt/sql/sql_base.cc:991
      #10 0x000055d47f1b3a67 in Locked_tables_list::unlock_locked_tables (this=0x147d2c004dd8, thd=0x147d2c000c68)at /test/11.8_opt/sql/sql_base.cc:2654
      #11 0x000055d47f1c956a in THD::cleanup (this=0x147d2c000c68)at /test/11.8_opt/sql/sql_class.cc:1667
      #12 0x000055d47f12621e in unlink_thd (thd=0x147d2c06d628, thd@entry=0x147d2c000c68) at /test/11.8_opt/sql/mysqld.cc:2865
      #13 0x000055d47f34d32d in do_handle_one_connection (connect=<optimized out>, connect@entry=0x55d485522bf8, put_in_cache=true)at /test/11.8_opt/sql/sql_connect.cc:1426
      #14 0x000055d47f34d06f in handle_one_connection (arg=arg@entry=0x55d485522bf8)at /test/11.8_opt/sql/sql_connect.cc:1327
      #15 0x000055d47f6d33e9 in pfs_spawn_thread (arg=0x55d4854cf4e8)at /test/11.8_opt/storage/perfschema/pfs.cc:2198
      #16 0x0000147d8829caa4 in start_thread (arg=<optimized out>)at ./nptl/pthread_create.c:447
      #17 0x0000147d88329c3c in clone3 ()at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78
      

      Bug confirmed present in:
      MariaDB: 11.7.2 (dbg), 11.7.2 (opt), 11.8.1 (dbg), 11.8.1 (opt), 12.0.0 (dbg), 12.0.0 (opt)

      Bug (or feature/syntax) confirmed not present in:
      MariaDB: 10.11.12 (dbg), 10.11.12 (opt), 11.4.6 (dbg), 11.4.6 (opt)

      Attachments

        Activity

          People

            serg Sergei Golubchik
            ramesh Ramesh Sivaraman
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1.5h
                1.5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.