MDEV-36256 Crash on disconnect when dropped Aria table with vector key under lock

Aria tables need HA_EXTRA_PREPARE_FOR_DROP